# tutorials-py

./: .gitignore  README.md
01-hello/: .env.example  README.md  calculator.py  main.py  ollama.py  pyproject.toml
02-swap-model/: README.md  calculator.py  main.py  pyproject.toml
03-cloud-provider/: .env.example  README.md  main.py  pyproject.toml
04-primitive-gate/: README.md  counter.py  main.py  ollama.py  pyproject.toml
05-read-only/: README.md  main.py  notebook.py  pyproject.toml
06-deterministic/: README.md  dates.py  main.py  pyproject.toml
07-type-contract/: README.md  main.py  pyproject.toml  textkit.py
08-read-the-plan/: README.md  main.py  pyproject.toml
09-read-the-trace/: README.md  cart.py  main.py  pyproject.toml
10-read-the-metrics/: README.md  main.py  pyproject.toml
11-plan-without-executing/: README.md  main.py  pyproject.toml
12-execute-a-plan/: README.md  main.py  pyproject.toml
13-analyze-a-plan/: README.md  account.py  main.py  pyproject.toml
14-first-decomposition/: README.md  cart.py  main.py  pyproject.toml
15-expanded-intent/: README.md  glossary.py  main.py  pyproject.toml
16-read-the-prompt/: README.md  calculator.py  main.py  pyproject.toml
17-design-execute/: README.md  accumulator.py  main.py  pyproject.toml
18-loop-guard/: README.md  main.py  pyproject.toml
19-design-execute-limits/: README.md  cart.py  main.py  pyproject.toml
20-conditional-logic/: README.md  cart.py  main.py  pyproject.toml
21-goal-seeking/: README.md  guesser.py  main.py  pyproject.toml
22-pipe/: README.md  analyst.py  main.py  pyproject.toml
23-wikipedia/: README.md  analyst.py  main.py  pyproject.toml
24-pydantic-model/: README.md  main.py  pyproject.toml  store.py
25-nested-models/: README.md  main.py  pyproject.toml  recipes.py
26-on-mutation/: README.md  bank.py  main.py  pyproject.toml
27-human-approval/: README.md  emailer.py  main.py  pyproject.toml
28-token-accounting/: README.md  calc.py  main.py  pyproject.toml
29-budget-guard/: README.md  main.py  pyproject.toml
30-no-progress/: README.md  main.py  pyproject.toml
31-decomposition-coverage/: README.md  catalog.py  main.py  pyproject.toml
32-multiturn-cart/: README.md  cart.py  main.py  pyproject.toml
33-z3-constraints/: README.md  main.py  pyproject.toml  solver.py
34-sympy-calculus/: README.md  calculus.py  main.py  pyproject.toml
35-two-agents/: README.md  abbrev_agent.py  calc_agent.py  main.py  master.py  pyproject.toml
36-mortgage-eligibility/: README.md  checker.py  main.py  pyproject.toml
37-prompt-injection/: README.md  main.py  pyproject.toml  safe_agent.py  tool_calling_agent.py
37-prompt-injection/documents/: bad_doc.txt  clean_report.txt  injected_report.txt
38-structured-memory/: README.md  main.py  memory_agent.py  pyproject.toml
39-unstructured-memory/: README.md  diary_agent.py  main.py  pyproject.toml
40-voice-date-agent/: README.md  date_agent.py  main.py  pyproject.toml
41-custom-llm/: README.md  main.py  my_ollama.py  pyproject.toml
42-multi-model/: README.md  image_agent.py  llm.py  main.py  ollama.py  pyproject.toml
43-parallel-research/: .gitignore  README.md  document_agent.py  main.py  pyproject.toml  research_agent.py
44-user-sandbox/: README.md  main.py  note_agent.py  pyproject.toml
45-coding-agent/: README.md  coding_agent.py  main.py  pyproject.toml
45-coding-agent/programs/: binary_search.py  factorial.py  fib.py
46-nl-to-sql/: .gitignore  README.md  main.py  pyproject.toml  sql_agent.py
47-csv-analyst/: .gitignore  README.md  csv_agent.py  main.py  pyproject.toml
48-chat-sql/: .gitignore  README.md  chat.html  main.py  pyproject.toml  sql_agent.py
