[project]
name = "osai-track-09-read-the-trace"
version = "0.1.0"
description = "Track 9, read the execution trace: the plan after it ran, one step at a time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
    "pydantic>=2",
]

[tool.uv]
package = false
