[project]
name = "osai-track-13-analyze-a-plan"
version = "0.1.0"
description = "Track 13, analyze a plan's structure: read the primitive calls and read_only flags without running it."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false
