[project]
name = "osai-track-14-first-decomposition"
version = "0.1.0"
description = "Track 14, your first decomposition: teach the planner with a worked example."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
    "pydantic>=2",
]

[tool.uv]
package = false
