[project]
name = "osai-track-15-expanded-intent"
version = "0.1.0"
description = "Track 15, expanded_intent: describe a decomposition's approach, not just its intent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
opensymbolicai-core = { path = "../../core-py" }
