[project]
name = "osai-track-20-conditional-logic"
version = "0.1.0"
description = "Track 20, conditional logic: loop + if/elif/else with a tiered discount, reading the trace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false
