[project]
name = "osai-track-21-goal-seeking"
version = "0.1.0"
description = "Track 21, GoalSeeking: iterative plan-execute-evaluate loop with a static @evaluator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
opensymbolicai-core = { path = "../../core-py" }
