[project]
name = "osai-track-22-pipe"
version = "0.1.0"
description = "Track 22, pipe: a large intermediate list passes as a variable, never as a prompt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
opensymbolicai-core = { path = "../../core-py" }
