[project]
name = "osai-track-26-on-mutation"
version = "0.1.0"
description = "Track 26: on_mutation policy hook — allow or block non-read-only primitives."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
opensymbolicai-core = { path = "../../core-py" }
