[project]
name = "osai-track-29-budget-guard"
version = "0.1.0"
description = "Track 29: token-budget guard — stop a batch before the budget runs out."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
opensymbolicai-core = { path = "../../core-py" }
