[project]
name = "osai-track-43-parallel-research"
version = "0.1.0"
description = "Track 43: one agent decomposes research questions, many DocumentAgents answer in parallel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
]

[tool.uv]
package = false
