[project]
name = "osai-track-48-chat-sql"
version = "0.1.0"
description = "Track 48: chat frontend over a SQL database powered by an NL-to-SQL agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensymbolicai-core>=0.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.uv]
package = false
